chore: Update internal test Redpanda img and add some Kafka timeouts